--- a/index.css
+++ b/index.css
@@ -26,10 +26,10 @@ h1 {
   .corpo {
     display: flex;
     justify-content: center;
-    margin: 200px;
+    margin: 130px;
   }
   .login {
-    background-color: #cf8282;
+    background-color: #6d4709;
     justify-content: center;
     display: flex;
     border-radius: 30px;
@@ -54,8 +54,8 @@ form {
     width: 300px;
     height: 80px;
     align-items: center;
-    background-color: #000000;
-    color: rgb(255, 255, 255);
+    background-color: #fff9a3;
+    color: rgb(0, 0, 0);
     margin: 50px;
     padding: 30px;
     border-radius: 15px;
